<resources>
    <string name="app_name">Food Scoot</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="no_account_signup">Don\'t have an account? Signup</string>
    <string name="password_reset_hint">Enter Registered Email and Phone to reset Password</string>
    <string name="shared_preferences">User Preferences</string>
    <string name="menu_home">Home</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_faq">FAQ</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="faq_q1">How is the food delivered?</string>
    <string name="faq_a1">The fod is delivered  hot and fresh via our personnel right at your doorstep</string>
    <string name="faq_q2">How can I pay?</string>
    <string name="faq_a2">There are many payment options to chose from. Pick any of Paypal, UPI, Debit/Credit Cards
    or net banking</string>
    <string name="faq_q3">How long does it until I get my food</string>
    <string name="faq_a3">It depends on the amount, complexity and the number of dishes you ordered and also on how far is the delivery location.But for most customers it is around 40 minutes</string>
    <string name="faq_q4">Will I get my entire order in single delivery?</string>
    <string name="faq_a4"> This depends on the items you have ordered. We have partnered with different suppliers for different products to help you get the best pricing.</string>
    <string name="faq_q5"> Is delivery free?</string>
    <string name="faq_a5">. Yes. There are no delivery or handling charges.</string>
    <string name="faq_q6"> When I have to pay?</string>
    <string name="faq_a6">You will have to pay at the time of delivery as per the payment details we send to you via email</string>
    <string name="add_btn_text">ADD</string>
    <string name="success_msg">Your Order has been placed successfully!</string>
    <string name="order_history">Order History</string>
    <string name="log_out">Log Out</string>
    <string name="sort_text">Sort</string>
</resources>